-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
-
26b26e389 (dev), 84afdd0dd (6.9)
-
Multimedia, weeks 18-19
To reproduce, run mediaplayer qml example and play media with sound. Change playback speed to any speed except 1.
Expected result:
- Audio playback with unaltered pitch
Actual results:
- Audio gets out of sync with video
- Audio is cracking heavily
- 'D/iaplayerexample: PlayerBase::stop() from IPlayer' is continuously logged.
- is duplicated by
-
QTBUG-134228 Changing playback speed results in cracking and out-of-sync sound when playing audio/video on Android
-
- Closed
-
| For Gerrit Dashboard: QTBUG-134229 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 636298,6 | FFmpeg: improve pitch shifting performance | dev | qt/qtmultimedia | Status: MERGED | +2 | +1 |
| 638931,2 | FFmpeg: improve pitch shifting performance | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |