FFmpeg: improve pitch shifting performance

optimize the cpp file even in debug builds, as debug builds may be too
slow to run

Task-number: QTBUG-134229
Change-Id: I20213f81a857b1304791aff55153116b4d6ad7f0
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 26b26e389b6d9cb45182d8c87c539fef20744bcf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>