src/plugins/multimedia/ffmpeg/playbackengine/qffmpegaudioframeconverter.cpp
@@ -8,6 +8,10 @@
 #include <QtFFmpegMediaPluginImpl/private/qffmpegresampler_p.h>
 #include <QtFFmpegMediaPluginImpl/private/qffmpegmediaformatinfo_p.h>
 
+#if defined(Q_CC_MSVC) && defined(QT_MM_OPTIMIZE_DEBUG)
+#  pragma optimize("s", on)
+#endif
+
 // TODO: namespace 3p library to prevent odr violations
 #include <signalsmith-stretch.h>
 
